--- a/css/main_page.css
+++ b/css/main_page.css
@@ -17,6 +17,8 @@
 .article-item-title {
     font-size: 24px;
     font-weight: bold;
+    color: black;
+    text-decoration: none;
 }
 
 .article-item-intro {
@@ -36,7 +38,7 @@
 .article {
     margin-left: 20%;
     margin-right: 20%;
-    margin-bottom: 100px;
+    margin-bottom: 200px;
 }
 
 .article-title {
@@ -85,6 +87,29 @@
     color: gray;
     float: left;
     margin-left: 5px;
+}
+
+.comment-public {
+    margin-bottom: 20px;
+}
+
+.comment-textarea {
+    width: 100%;
+    height: 100px;
+}
+
+.comment-public-button {
+    width: 100px;
+    height: 40px;
+    background-color: rgb(11, 199, 11);
+    color: white;
+    font-size:18px;
+    margin-top: 10px;
+    border-radius: 5%;
+    /* 弹性盒子 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .comment {
